@@ -8,6 +8,7 @@ phpMyAdmin - ChangeLog
 - bug #3463933 [display] SELECT DISTINCT displays wrong total records found
 - patch #3458944 [operations] copy table data missing SET SQL_MODE='NO_AUTO_VALUE_ON_ZERO'
 - bug #3469254 [edit] Setting data to NULL and drop-downs
+- bug #3477063 [edit] Missing set fields and values in generated INSERT query
 
 3.4.9.0 (2011-12-21)
 - bug #3442028 [edit] Inline editing enum fields with null shows no dropdown
